# state-set

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: error.rs  iter.rs  lib.rs  state.rs  state_indexable.rs  state_set.rs  states.rs
state-derive/: Cargo.toml
state-derive/src/: derive_states.rs  lib.rs
states-derive/: Cargo.toml
states-derive/src/: derive_states.rs  lib.rs
tests/: derive_state.rs  derive_states.rs
