[workspace]
members = ["state-derive"]

[package]
name = "state-set"
licence = "MIT/Apache-2.0"
version = "0.1.0"
authors = ["Taihei OKI <t.oki.natrium@gmail.com"]
repository = "https://github.com/taiheioki/state-set"
edition = "2021"

[dependencies]
state-derive = { path = "./state-derive", optional = true }
serde = { version = "1.0", optional = true }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0.100"

[features]
derive = ["state-derive"]
serde = ["dep:serde"]

[[test]]
name = "derive_state"
path = "tests/derive_state.rs"
required-features = ["derive"]
