[workspace]
members = ["state-derive"]

[package]
name = "state-set"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
authors = ["Taihei OKI <t.oki.natrium@gmail.com"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/taiheioki/state-set"
description = "Memory-efficient representation of sets for types with finite states using bit vectors"
categories = ["data-structures"]
keywords = ["data-structures", "bitflags"]

[features]
derive = ["state-derive"]
serde = ["dep:serde"]

[dependencies]
state-derive = { path = "./state-derive", optional = true }
serde = { version = "1.0", optional = true }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0.100"

[[test]]
name = "derive_state"
path = "tests/derive_state.rs"
required-features = ["derive"]

[package.metadata.docs.rs]
all-features = true
