[package]
name = "state-derive"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.0"
authors = ["Taihei OKI <t.oki.natrium@gmail.com"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/taiheioki/state-set"
description = "Macro implementation of #[derive(State)] for state-set crate"
categories = ["data-structures", "no-std"]
keywords = ["data-structures", "bitflags", "no-std"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dev-dependencies]
state-set = { path = "..", features = ["derive"] }
